--- a/views/viewOperator.ejs
+++ b/views/viewOperator.ejs
@@ -38,8 +38,9 @@
             Welding Operator Performance Qualification Test Record (WOPQT)</h2>
           <h3
             style=" font-size: medium; font-weight: bold; color: black; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-            <%= record.operatorName || 'N/A' %>
+            <%= record.clientName || 'N/A' %>
           </h3>
+
         </div>
       </th>
       <th>
@@ -52,7 +53,8 @@
     <tbody>
       <thead>
         <tr>
-          <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Welding Operator Data & Test Description</th>
+          <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Welding
+            Operator Data & Test Description</th>
         </tr>
       </thead>
       <tr>
@@ -129,21 +131,25 @@
 
     <thead>
       <tr>
-        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Testing Variables and Qualification Limits</th>
+        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Testing
+          Variables and Qualification Limits</th>
       </tr>
       <tr>
-        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Testing Variables and Qualification Limits
+        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Testing
+          Variables and Qualification Limits
           When Using Automatic Welding Equipment</th>
       </tr>
       <tr>
         <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;">Welding variables</th>
         <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;">Actual Values</th>
-        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="2">Range Qualified</th>
+        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="2">Range
+          Qualified</th>
       </tr>
     </thead>
     <tbody style="text-align: center">
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Type of Welding (Automatic)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Type of
+          Welding (Automatic)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.typeOfWeldingAutomaticActual || 'N/A' %>
         </td>
@@ -163,7 +169,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Filler Metal Used (Yes or No) (EBW or
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Filler
+          Metal Used (Yes or No) (EBW or
           LBW)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.fillerMetalUsedActual || 'N/A' %>
@@ -173,7 +180,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Type of Laser for LBW (CO2 to YAG,
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Type of
+          Laser for LBW (CO2 to YAG,
           etc.)
         </td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
@@ -184,7 +192,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Countinous Drive or Inertia Welding
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">
+          Countinous Drive or Inertia Welding
           (FW)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.countinousDriveActual || 'N/A' %>
@@ -194,7 +203,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Vacuum or Out of Vacuum (EBW)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Vacuum
+          or Out of Vacuum (EBW)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.vacuumOutOfVacuumActual || 'N/A' %>
         </td>
@@ -206,18 +216,21 @@
 
     <thead>
       <tr>
-        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Testing Variables and Qualification Limits
+        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="12">Testing
+          Variables and Qualification Limits
           When Using Machine Welding Equipment</th>
       </tr>
       <tr>
         <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;">Welding variables</th>
         <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;">Actual Values</th>
-        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="2">Range Qualified</th>
+        <th style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;" colspan="2">Range
+          Qualified</th>
       </tr>
     </thead>
     <tbody style="text-align: center">
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Type of Welding (Machine)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Type of
+          Welding (Machine)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.typeOfWeldingMachineActual || 'N/A' %>
         </td>
@@ -237,7 +250,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Direct or Remote Visual Control</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Direct
+          or Remote Visual Control</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.directRemoteVisualControlActual || 'N/A' %>
         </td>
@@ -246,7 +260,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Automatic Arc Voltage Control (GTAW)
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">
+          Automatic Arc Voltage Control (GTAW)
         </td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.automaticArcVoltageControlActual || 'N/A' %>
@@ -256,7 +271,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Automatic Joint Tracking</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">
+          Automatic Joint Tracking</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.automaticJointTrackingActual || 'N/A' %>
         </td>
@@ -265,7 +281,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Position(s)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">
+          Position(s)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.positionsMachineActual || 'N/A' %>
         </td>
@@ -274,7 +291,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Base Material Thickness</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Base
+          Material Thickness</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.baseMaterialThicknessActual || 'N/A' %>
         </td>
@@ -294,7 +312,8 @@
         </td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Backing (With or Without)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Backing
+          (With or Without)</td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;">
           <%= record.backingActual || 'N/A' %>
         </td>
@@ -333,6 +352,8 @@
               <h4 style="margin: 0; line-height: 1.1; font-size: 12px;">Liquid Penetrant Examination (PT)</h4>
               <h4 style="margin: 0; line-height: 1.1; font-size: 12px;">Ultrasonic Testig (UT)</h4>
               <h4 style="margin: 0; line-height: 1.1; font-size: 12px;">Bend Test</h4>
+              <h4 style="margin: 0; line-height: 1.1; font-size: 12px;">Radiographic Examination (RT)</h4>
+
             </div>
           </td>
           <td style="text-align: center;">
@@ -343,18 +364,27 @@
             </div>
             <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
               <input type="checkbox" disabled <%=record.liquidPenetrantExamination &&
-                record.liquidPenetrantExamination.performed ? 'checked' : '' %> style="width: 12px; height: 12px; margin: 0;">
+                record.liquidPenetrantExamination.performed ? 'checked' : '' %> style="width: 12px; height: 12px;
+              margin: 0;">
               <h6 style="margin: 0; line-height: 1;"></h6>
             </div>
             <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
-              <input type="checkbox" disabled <%=record.ultrasonicTesting && record.ultrasonicTesting.performed ? 'checked'
-                : '' %> style="width: 12px; height: 12px; margin: 0;">
+              <input type="checkbox" disabled <%=record.ultrasonicTesting && record.ultrasonicTesting.performed
+                ? 'checked' : '' %> style="width: 12px; height: 12px; margin: 0;">
               <h6 style="margin: 0; line-height: 1;"></h6>
             </div>
             <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
-              <input disabled type="checkbox" <%=record.bendTest && record.bendTest.performed ? 'checked' : '' %> style="width: 12px; height: 12px; margin: 0;">
+              <input disabled type="checkbox" <%=record.bendTest && record.bendTest.performed ? 'checked' : '' %>
+              style="width: 12px; height: 12px; margin: 0;">
               <h6 style="margin: 0; line-height: 1;"></h6>
             </div>
+            <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
+              <input disabled type="checkbox" <%=record.radiographicExamination &&
+                record.radiographicExamination.performed ? 'checked' : '' %> style="width: 12px; height: 12px; margin:
+              0;">
+              <h6 style="margin: 0; line-height: 1;"></h6>
+            </div>
+
           </td>
           <td>
             <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
@@ -377,6 +407,12 @@
                 <%= (record.bendTest && record.bendTest.results) || '' %>
               </h6>
             </div>
+            <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
+              <h6 style="margin: 0; line-height: 1;">
+                <%= (record.radiographicExamination && record.radiographicExamination.results) || '' %>
+              </h6>
+            </div>
+
           </td>
           <td>
             <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
@@ -399,13 +435,20 @@
                 <%= (record.bendTest && record.bendTest.reportNumber) || '' %>
               </h6>
             </div>
+            <div style="display: flex; gap: 4px; justify-content: center; align-items: center; height: 16px;">
+              <h6 style="margin: 0; line-height: 1;">
+                <%= (record.radiographicExamination && record.radiographicExamination.reportNumber) || '' %>
+              </h6>
+            </div>
+
           </td>
         </tr>
       </tbody>
       <thead>
         <tr>
           <th colspan="4">
-            <p style="font-size: 11px;">We certify that the statements in this record are correct and that the test coupons were prepared, welded and tested in accordance with the requirements of <span
+            <p style="font-size: 11px;">We certify that the statements in this record are correct and that the test
+              coupons were prepared, welded and tested in accordance with the requirements of <span
                 style="color: rgb(0, 131, 254); font-weight: bold;">
                 <%= record.lawName %>
               </span>.</p>
@@ -423,13 +466,18 @@
             <p style="font-weight: bold; font-size: 13px; width: 300px; "> Arabian Testing Evolution Company (ATECO)</p>
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <span style="font-weight: bold;">Testing Witnessed / Welder Inspector</span>
-              <span style="text-decoration: underline;">____________________</span>
+              <span style="text-decoration: underline;">
+                <%= record.witnessedBy || '____________________' %>
+              </span>
             </div>
 
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <span style="font-weight: bold;">Test Supervisor / Technical Manager</span>
-              <span style="text-decoration: underline;">____________________</span>
+              <span style="text-decoration: underline;">
+                <%= record.supervisorName || '____________________' %>
+              </span>
             </div>
+
 
           </div>
         </td>
@@ -437,7 +485,9 @@
           <div style="display: flex; flex-direction: column; gap: 20px; ">
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <span style="font-weight: bold; ">Client Name:</span>
-              <span style="text-decoration: underline;">____________________</span>
+              <span style="text-decoration: underline;">
+                <%= record.clientName || '____________________' %>
+              </span>
             </div>
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <span style="font-weight: bold;">Client Signature:</span>
